Fix questions displaying off the screen on mobile

--- a/src/styles/components/questionnaire/mobile.less
+++ b/src/styles/components/questionnaire/mobile.less
@@ -21,6 +21,7 @@
     .questionnaire__questions {
       padding: 25px 9px;
       border: solid 1px #d8d8d8;
+      margin-left: 0;
       &.nextStay {
         margin-left: 0;
         height: auto;
